objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <label>Claim</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>