objects/Claim__c/fields/Adjuster__c.field-meta.xml
<CustomField>
    <fullName>Adjuster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adjuster</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Adjusted Claims</relationshipLabel>
    <relationshipName>Adjusted_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>