objects/Claim__c/recordTypes/Accident.recordType-meta.xml
<RecordType>
    <fullName>Accident</fullName>
    <active>true</active>
    <description>Accident claim</description>
    <label>Accident</label>
</RecordType>