objects/Claim__c/recordTypes/Life.recordType-meta.xml
<RecordType>
    <fullName>Life</fullName>
    <active>true</active>
    <description>Life claim</description>
    <label>Life</label>
</RecordType>