objects/Claim__c/recordTypes/Property.recordType-meta.xml
<RecordType>
    <fullName>Property</fullName>
    <active>true</active>
    <description>Property claim</description>
    <label>Property</label>
</RecordType>